tests/macros/expand/validate_async.stderr
error: option `validate_async` does not exist for kind `expand`
 --> $DIR/validate_async.rs:2:52
  |
2 |     let q = inquisition::questions![expand { async validate: todo!() }];
  |                                                    ^^^^^^^^
