tests/macros/expand/validate_async.rs
fn main() {
    let q = inquisition::questions![expand { async validate: todo!() }];
}
